syntax = "proto3";

package test;

service TestService {
  rpc get_Bidi (stream Request) returns (stream Response) {} // test rename support
  rpc getServerStream (Request) returns (stream Response) {}
  rpc getClientStream (stream Request) returns (Response) {}
  rpc getUnary (Request) returns (Response) {}
}

message Request {
  string first = 1;
  int32 second = 2;
}

message Response {
  required string first = 1;
}
